wip switch to fastapi

--- a/templates/character_list.html
+++ b/templates/character_list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Character List</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <h1>{{ campaign.title }}</h1>
@@ -36,6 +36,6 @@
     </div>
     <button id="add_character_button">Add New Character</button>
     <button id="continue_characters">Continue with Current Characters</button>
-    <script src="{{ url_for('static', filename='js/scripts.js') }}"></script>
+    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
