--- a/templates/character_creation.html
+++ b/templates/character_creation.html
@@ -6,7 +6,7 @@
     <title>Character Creation</title>
     <link
       rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles.css') }}"
+      href="/static/css/styles.css"
     />
   </head>
   <body>
