--- a/templates/game_screen.html
+++ b/templates/game_screen.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Screen</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
+    <link rel="stylesheet" href="/static/css/styles.css">
 </head>
 <body>
     <h1>Welcome to RNGesus</h1>
@@ -15,6 +15,6 @@
         {% endfor %}
     </ul>
     <button id="new_campaign_button" onclick="location.href='{{ url_for('new_campaign') }}'">Start a New Campaign</button>
-    <script src="/static/scripts.js"></script>
+    <script src="/static/js/scripts.js"></script>
 </body>
 </html>
